fix the issue that id columns in the data tables are too wide fix the problem that the empty notion is not at the centre

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -12,3 +12,11 @@
 	cursor: text;
 	padding: 8px;
 }
+
+.centre-grid-box {
+	height: 100%;
+	width: 100%;
+
+	display: grid;
+	place-items: center;
+}
